--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,12 @@
 {
   "name": "cloud-billing-frontend",
   "private": true,
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -12,6 +15,7 @@
     "recharts": "^2.9.0"
   },
   "devDependencies": {
+    "vite": "^5.0.0",
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0"
