--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,12 @@
-FROM node:18-alpine as build
+FROM node:18-alpine AS build
+
 WORKDIR /app
+
+COPY package.json package-lock.json* ./
+RUN npm install
+
 COPY . .
-RUN npm install && npm run build
+RUN npm run build
 
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
