--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: backend
-        image: billing-backend:latest
+        image: aazammohammad193/billing-backend:latest
         ports:
         - containerPort: 8000
