--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: billing-backend-aggrregator:latest
+        image: billing-frontend:latest
         ports:
         - containerPort: 80
