--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: billing-backend
+  labels:
+    app: billing-backend
 spec:
   replicas: 1
   selector:
@@ -13,7 +15,8 @@ spec:
         app: billing-backend
     spec:
       containers:
-      - name: backend
-        image: billing-backend:latest
-        ports:
-        - containerPort: 8000
+        - name: backend
+          image: billing-backend:latest
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
