--- a/k8s/backend-service.yaml
+++ b/k8s/backend-service.yaml
@@ -6,7 +6,5 @@ spec:
   selector:
     app: billing-backend
   ports:
-    - protocol: TCP
-      port: 8000
+    - port: 8000
       targetPort: 8000
-  type: ClusterIP
